--- a/src/pages/Form/styles/_form-buttons.scss
+++ b/src/pages/Form/styles/_form-buttons.scss
@@ -50,53 +50,22 @@
 
 // Checkbox
 
+.react-tel-input .special-label {
+  display: none !important;
+}
+
 .phone-number-select {
   width: 100%;
-  height: 25px;
-  padding: 1rem;
-
+  height: auto;
   margin-bottom: 40px;
-
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
-
   @include flex-mixin.flex-start;
-
   flex-direction: row;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+  display: flex;
+  background: none;
 
-  img {
-    cursor: pointer;
-  }
-
-  select {
-    color: rgba(255, 255, 255, 0.5);
-    margin-right: 0.5rem;
-    font-size: 1rem;
-    cursor: pointer;
-    width: 100px;
-  }
-
-  option {
-    color: rgba(255, 255, 255, 0.5);
-    background-color: rgba(79, 79, 79, 0.5);
-  }
-
-  input {
-    border: none;
-    width: auto;
-
-    margin: 0;
-
-
-    &:focus {
-      border: none;
-    }
-
-    &:hover {
-      border: none;
-    }
-  }
 }
+
 
 .form-section-checkbox {
   width: 100%;
