--- a/src/styles.css
+++ b/src/styles.css
@@ -259,42 +259,21 @@
   text-underline-offset: 0.5rem;
 }
 
+.react-tel-input .special-label {
+  display: none !important;
+}
+
 .phone-number-select {
   width: 100%;
-  height: 25px;
-  padding: 1rem;
+  height: auto;
   margin-bottom: 40px;
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
-}
-.phone-number-select img {
-  cursor: pointer;
-}
-.phone-number-select select {
-  color: rgba(255, 255, 255, 0.5);
-  margin-right: 0.5rem;
-  font-size: 1rem;
-  cursor: pointer;
-  width: 100px;
-}
-.phone-number-select option {
-  color: rgba(255, 255, 255, 0.5);
-  background-color: rgba(79, 79, 79, 0.5);
-}
-.phone-number-select input {
-  border: none;
-  width: auto;
-  margin: 0;
-}
-.phone-number-select input:focus {
-  border: none;
-}
-.phone-number-select input:hover {
-  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.502);
+  display: flex;
+  background: none;
 }
 
 .form-section-checkbox {
@@ -375,8 +354,9 @@
   width: 50%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  flex-direction: row;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -385,12 +365,13 @@
   height: auto;
   min-height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
+  flex-direction: column;
   padding: 50px 1.1rem 50px 1.1rem;
 }
 .form-inside-container-left h1 {
-  margin-bottom: 70px;
+  margin-bottom: 20px;
   font-weight: 800;
   font-size: 2rem;
   color: #f1f1e7;
@@ -976,6 +957,11 @@ button {
   outline: none;
   background: none;
   font-size: 1rem;
+}
+
+select {
+  -webkit-appearance: listbox;
+  -moz-appearance: listbox;
 }
 
 button:hover {
