Added styles for Pirvacy

--- a/src/pages/Privacy/styles/_Privacy.scss
+++ b/src/pages/Privacy/styles/_Privacy.scss
@@ -1,5 +1,6 @@
 @use "./privacy-wrapper";
 @use "./privacy-sidebar";
 @use "./privacy-list";
+@use "./privacy-header";
 @use "./privacy-articles";
 @use "./privacy-responsive";
