--- a/src/pages/Privacy/styles/_privacy-responsive.scss
+++ b/src/pages/Privacy/styles/_privacy-responsive.scss
@@ -4,11 +4,11 @@
   .privacy-container {
     width: 100%;
     height: auto;
-
-    border-radius: 20px;
+    padding: 1rem;
 
     p {
       font-size: 0.8rem;
+      width: 100%;
     }
 
     h3 {
@@ -21,9 +21,53 @@
     display: none;
   }
 
+  .privacy-wrapper {
+    .privacy-h1 {
+      font-weight: 700;
+      font-size: 1.5rem;
+      margin-bottom: 1.1rem;
+    }
+  }
+
+
   .list-container {
     ul li {
       font-size: 0.7rem;
+    }
+  }
+
+  .header-privacy {
+    width: 100%;
+    padding: 1rem;
+    z-index: 5001;
+    @include flex-mixin.flex-space-between;
+    flex-direction: row;
+  }
+
+
+  .menu-toggle-privacy {
+    @include flex-mixin.flex-center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid #373535;
+    background: transparent;
+    color: #373535;
+    cursor: pointer;
+
+    padding: 13px 9px 13px 9px;
+
+    font-size: 0.8rem;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .privacy-logo {
+    width: 200px;
+    height: 40px;
+
+    &:hover {
+      cursor: pointer;
     }
   }
 }
