--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@
   flex-direction: row;
   width: auto;
   border-radius: 10px;
-  padding: 1rem 1rem 1rem 1rem;
+  padding: 1rem 1rem 1rem 0;
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
 }
@@ -941,8 +941,8 @@ img {
 }
 
 html, body {
-  overflow-x: hidden;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 input,
