--- a/src/pages/Home/styles/_home-blocks.scss
+++ b/src/pages/Home/styles/_home-blocks.scss
@@ -61,7 +61,7 @@
         flex-direction: row;
         width: auto;
         border-radius: 10px;
-        padding: 1rem 1rem 1rem 1rem;
+        padding: 1rem 1rem 1rem 0;
 
         transition: background-color 0.3s ease-in-out;
 
