Updated Admin Panel

--- a/src/pages/Form/styles/_form-buttons.scss
+++ b/src/pages/Form/styles/_form-buttons.scss
@@ -41,11 +41,14 @@
   font-weight: 400;
   font-size: 1rem;
   color: white;
-}
 
-.form-sign-up-button:hover {
   text-decoration: underline;
   text-underline-offset: 0.5rem;
+  transition: color 0.3s ease, color 0.3s ease;
+
+  &:hover {
+    color: #959b59;
+  }
 }
 
 // Checkbox
