Added overscroll contain

--- a/src/styles.css
+++ b/src/styles.css
@@ -934,6 +934,7 @@ button.secondary:hover {
 body {
   font-family: "Manrope", "sans-serif";
   background-color: #4f532c;
+  overscroll-behavior: contain;
 }
 
 img {
