--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .home-wrapper {
+  width: 100%;
   height: 100dvh;
   display: flex;
   justify-content: center;
@@ -76,7 +77,7 @@
   font-weight: 300;
   font-size: 1.3rem;
   letter-spacing: 0.8px;
-  margin-bottom: 72px;
+  margin-bottom: 1rem;
 }
 .blocks .block-1 .block-1__description .link {
   font-size: 1.2rem;
@@ -90,17 +91,19 @@
 }
 .blocks .block-1 .block-1__description .block-1__text {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   width: auto;
+  height: auto;
   border-radius: 10px;
   padding: 1rem 1rem 1rem 0;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 1s ease-in-out, padding 0.3s ease-in-out;
   cursor: pointer;
 }
 .blocks .block-1 .block-1__description .block-1__text:hover {
   background-color: rgba(255, 255, 255, 0.1);
+  padding: 1rem 1rem 1rem 1rem;
 }
 .blocks .block-2 .block-2__title {
   color: white;
@@ -122,7 +125,7 @@
   flex-direction: column;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1100px) {
   .blocks .block-2 {
     width: 100%;
     padding-left: 3vw;
@@ -170,7 +173,7 @@
 .form-wrapper {
   height: auto;
   width: 100%;
-  padding: 1rem 0 2rem 0;
+  padding: 0 0 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -185,7 +188,7 @@
   width: 100%;
   min-height: 50px;
   padding: 1rem;
-  margin-bottom: 40px;
+  margin-bottom: 2rem;
   -webkit-text-fill-color: rgba(255, 255, 255, 0.5019607843) !important;
   transition: background-color 5000s ease-in-out 0s !important;
   color: rgba(255, 255, 255, 0.5);
@@ -325,7 +328,7 @@
 
 .form-login {
   width: 100%;
-  height: 800px;
+  height: 750px;
   backdrop-filter: blur(10px);
   display: flex;
   flex-direction: row;
@@ -927,10 +930,18 @@ button.secondary:hover {
 }
 
 .main-wrapper {
+  display: flex;
+  justify-items: center;
+  align-items: center;
   width: 100%;
-  height: auto;
+  height: 100dvh;
 }
 
+@media (max-width: 1800px) {
+  .main-wrapper {
+    height: auto;
+  }
+}
 body {
   font-family: "Manrope", "sans-serif";
   background-color: #4f532c;
