--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,8 +25,17 @@
 }
 
 .main-wrapper {
+  display: flex;
+  justify-items: center;
+  align-items: center;
   width: 100%;
-  height: auto;
+  height: 100dvh;
+}
+
+@media (max-width: 1800px) {
+  .main-wrapper {
+    height: auto;
+  }
 }
 
 body {
