Added error component and store

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @use "./pages/Success/styles/Success";
 @use "./pages/Survey/styles/Survey";
 @use "./pages/Admin/styles/Admin";
+@use "./components/Error/Error";
 
 // Mixins import
 @use "./mixins/bg-image-settings";
