--- a/src/styles.css
+++ b/src/styles.css
@@ -917,6 +917,46 @@ button.secondary:hover {
   background-color: #e53935;
 }
 
+.error-container {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  position: relative;
+  top: 0;
+  background-color: #eb6060;
+  color: white;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+.error-container img {
+  margin-right: 1rem;
+}
+
+.error-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+}
+.error-block .error-button {
+  height: 40px;
+  background-color: #959b59;
+  border: none;
+  padding: 0.5rem;
+  color: white;
+  border-radius: 0.2rem;
+  transition: background-color 0.3s ease-in-out;
+}
+.error-block .error-button:hover {
+  background-color: #959b59;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
