Removed bugs with Error

--- a/src/styles.css
+++ b/src/styles.css
@@ -171,7 +171,7 @@
   }
 }
 .form-wrapper {
-  height: auto;
+  height: 100dvh;
   width: 100%;
   padding: 0 0 2rem 0;
   display: flex;
@@ -381,6 +381,11 @@
   color: #f1f1e7;
 }
 
+@media (max-width: 1600px) {
+  .form-wrapper {
+    height: auto;
+  }
+}
 @media (max-width: 1000px) {
   .form-wrapper {
     display: flex;
