--- a/src/pages/Form/styles/_form-responsive.scss
+++ b/src/pages/Form/styles/_form-responsive.scss
@@ -1,6 +1,12 @@
 @use "../../../mixins/flex-mixin";
 @use "../../../mixins/background-mixin";
 
+@media (max-width: 1600px) {
+  .form-wrapper {
+    height: auto;
+  }
+}
+
 @media (max-width: 1000px) {
 
   .form-wrapper {
