--- a/src/mixins/_background-mixin.scss
+++ b/src/mixins/_background-mixin.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-image: url(#{$url});
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
   background-attachment: fixed;
   z-index: -1;
