--- a/src/pages/Survey/styles/_survey-header.scss
+++ b/src/pages/Survey/styles/_survey-header.scss
@@ -1,17 +1,45 @@
-.survey-header {
-  width: 100%;
-  height: 40px;
-  padding-top: 2rem;
-  margin-bottom: 0.8rem;
+@use "../../../mixins/flex-mixin";
 
-  p {
-    color: white;
-    font-weight: 300;
-    font-size: 1.2rem;
+.survey-header {
+  @include flex-mixin.flex-space-between;
+  margin-bottom: 5rem;
+  padding: 0 2rem;
+
+  width: 100%;
+
+  .header-item {
+    flex: 1;
+    display: flex;
+    align-items: center;
   }
 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  justify-items: center;
+  .header-center {
+    justify-content: center;
+
+    p {
+      color: white;
+      font-weight: 300;
+      font-size: 1.2rem;
+    }
+  }
+
+  .header-left {
+    justify-content: flex-start;
+
+    .logo {
+      height: 40px;
+      width: auto;
+      cursor: pointer;
+    }
+  }
+
+  .header-right {
+    justify-content: flex-end;
+
+    .close {
+      width: 25px;
+      height: 25px;
+      cursor: pointer;
+    }
+  }
 }
