--- a/src/pages/Survey/styles/_survey-question-block.scss
+++ b/src/pages/Survey/styles/_survey-question-block.scss
@@ -3,14 +3,15 @@
 .survey-block {
   width: 1300px;
   height: auto;
-  padding-bottom: 1rem;
+
+  padding: 2rem 0 3rem 0;
 
   background: rgba(55, 53, 53, 0.6);
 
-  display: flex;
+  @include flex-mixin.flex-center;
   flex-direction: column;
 
-  border-radius: 50px;
+  border-radius: 50%;
 }
 
 .survey-article {
@@ -19,27 +20,43 @@
 
   gap: 1rem;
 
+  padding: 1rem;
+
   @include flex-mixin.flex-center;
   flex-direction: column;
 
   h1 {
     font-weight: 800;
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     color: #F1F1E7;
+
+    text-align: center;
   }
 
   p {
     color: #F1F1E7;
     font-size: 1rem;
     font-weight: 200;
-    margin-bottom: 20px;
+    margin-bottom: 1.1rem;
   }
 
 }
 
 .question-block {
   width: 100%;
-  height: auto;
+  height: 100%;
+
+  @include flex-mixin.flex-center;
+  flex-direction:  column;
+
+  gap: 1rem;
+}
+
+.question-block-end {
+  width: 100%;
+  height: 500px;
+
+  color: white;
 
   @include flex-mixin.flex-center;
   flex-direction:  column;
