--- a/src/pages/Survey/styles/_survey-responsive.scss
+++ b/src/pages/Survey/styles/_survey-responsive.scss
@@ -15,6 +15,11 @@
     }
   }
 
+
+  .survey {
+    height: auto;
+  }
+
   .survey-block {
     width: 90%;
     height: auto;
@@ -24,7 +29,19 @@
   }
 
   .survey-header {
-    margin-bottom: 3rem;
+
+    p {
+      font-size: 0.8rem;
+    }
+    .logo {
+      width: 100px;
+      height: 35px;
+    }
+
+    .close {
+      width: 15px;
+      height: 15px;
+    }
   }
 
   .survey-article {
@@ -36,64 +53,27 @@
   }
 
   .radio-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    background-color: #f1f1e7;
     width: 100%;
     height: 50px;
-    border-radius: 5px;
-    padding-left: 1.1rem;
-    cursor: pointer;
 
-    margin-bottom: 2.2rem;
-
-    input[type="radio"] {
-      display: none;
-    }
-
-    .custom-radio {
-      width: 30px;
-      height: 30px;
-      border: 2px solid #8B833E;
-      border-radius: 50%;
-      background-color: white;
-      transition: all 0.2s ease;
-      position: relative;
-    }
-
-    input[type="radio"]:checked + .custom-radio {
-      border-color: #8B833E;
-      background-color: #8B833E;
-      box-shadow: 0 0 0 4px rgba(47, 58, 39, 0.2);
-    }
-
-    p {
-      font-size: 0.8rem;
-      font-weight: 400;
-    }
+    margin-bottom: 1rem;
   }
 
   .survey-config {
-    width: 100%;
-    height: auto;
-
     @include flex-mixin.flex-center;
-    flex-direction: row;
-
-    gap: 1.1rem;
+    margin-top: 5rem;
+    height: 50px;
   }
 
   .next-end-button {
     width: 120px;
     height: 40px;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
     font-weight: 500;
   }
 
   .prev-skip-button {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
     font-weight: 400;
   }
 }
