--- a/src/styles.css
+++ b/src/styles.css
@@ -1035,7 +1035,6 @@ button.secondary:hover {
 body {
   font-family: "Manrope", "sans-serif";
   background-color: #4f532c;
-  overscroll-behavior: contain;
 }
 
 img {
@@ -1046,6 +1045,7 @@ img {
 html, body {
   height: 100%;
   scroll-behavior: smooth;
+  overscroll-behavior-y: contain;
 }
 
 input,
