--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,6 @@
 body {
   font-family: "Manrope", "sans-serif";
   background-color: #4f532c;
-  overscroll-behavior: contain;
 }
 
 img {
@@ -53,6 +52,7 @@ img {
 html, body {
   height: 100%;
   scroll-behavior: smooth;
+  overscroll-behavior-y: contain;
 }
 
 
