--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -69,6 +69,10 @@
       color: #000000;
     }
   }
+
+  .submenu div:last-child {
+    border-bottom: none;
+  }
 }
 
 @media (max-width: 1024px) {
