--- a/src/pages/Survey/styles/_survey-responsive.scss
+++ b/src/pages/Survey/styles/_survey-responsive.scss
@@ -15,17 +15,16 @@
     }
   }
 
-
-  .survey {
+  .survey-block {
+    width: 99%;
     height: auto;
+    padding: 1rem 1rem 5rem 1rem;
+    border-radius: 30px;
   }
 
-  .survey-block {
-    width: 90%;
-    height: auto;
-    padding-bottom: 5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .survey {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   .survey-header {
@@ -44,36 +43,35 @@
     }
   }
 
-  .survey-article {
-    p {
-      text-align: center;
-      width: 100%;
-      font-size:  0.8rem;
-    }
-  }
-
   .radio-container {
     width: 100%;
     height: 50px;
 
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+
+    @include flex-mixin.flex-start;
+    flex-direction: row;
+
+    p {
+      font-size: 0.8rem;
+    }
   }
 
   .survey-config {
     @include flex-mixin.flex-center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     height: 50px;
   }
 
   .next-end-button {
     width: 120px;
     height: 40px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 500;
   }
 
   .prev-skip-button {
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 400;
   }
 }
