--- a/src/pages/Survey/styles/_survey-wrapper.scss
+++ b/src/pages/Survey/styles/_survey-wrapper.scss
@@ -12,7 +12,7 @@
 .survey {
   z-index: 1;
   width: 100%;
-  height: 100dvh;
+  height: auto;
 
   @include flex-mixin.flex-center;
   flex-direction: column;
@@ -29,7 +29,7 @@
 
   background: rgba(55, 53, 53, 0.6);
 
-  display: flex;
+  @include flex-mixin.flex-center;
   flex-direction: column;
 
   border-radius: 50px;
