--- a/src/pages/Survey/styles/_survey-question-block.scss
+++ b/src/pages/Survey/styles/_survey-question-block.scss
@@ -29,7 +29,9 @@
 
   h1 {
     font-weight: 800;
-    font-size: 1.8rem;
+    font-size: 1.2rem;
+
+    width: 100%;
 
     text-align: center;
   }
@@ -48,7 +50,7 @@
   @include flex-mixin.flex-center;
   flex-direction:  column;
 
-  gap: 1rem;
+  gap: 0.1rem;
 }
 
 .question-block-end {
