--- a/src/pages/Admin/styles/_admin-wrapper.scss
+++ b/src/pages/Admin/styles/_admin-wrapper.scss
@@ -13,24 +13,11 @@
   min-height: 100vh;
   height: auto;
 
-  background: rgba(204, 204, 204, 0.8);
+  background-color: #f4f4f4;
 
   padding: 1rem;
 
   border: 1px solid black;
-}
-
-.admin-bg {
-  background-image: url("/assets/dark-bg.webp");
-  @include bg-image-settings.bg-settings;
-  filter: brightness(50%);
-  pointer-events: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  inset: 0;
-
-  z-index: -1;
 }
 
 .admin-panel h2 {
