--- a/src/pages/Form/styles/_form-login.scss
+++ b/src/pages/Form/styles/_form-login.scss
@@ -4,6 +4,7 @@
   position: relative;
   z-index: 1;
   width: clamp(300px, 80vw, 1300px);
+  min-height:  840px;
   height: auto;
 
   background-image: url("/assets/form-back.webp");
@@ -11,7 +12,7 @@
 
   border-radius: 4px;
 
-  padding: 1rem;
+  padding: 3rem;
 
   @include flex-mixin.flex-center;
 
@@ -19,15 +20,12 @@
 
 .form-login {
   width: 100%;
-  height: 750px;
-
+  min-height: 740px;
+  height: auto;
   backdrop-filter: blur(10px);
 
-  display: flex;
+  @include flex-mixin.flex-center;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
 }
 
 .form-article {
@@ -61,14 +59,13 @@
 
 .form-inside-container-left {
   width: 100%;
-  height: auto;
-  min-height: 100%;
+  min-height: 740px;
+  height: 100%;
+
   @include flex-mixin.flex-start-start;
   flex-direction: column;
 
-
-
-  padding: 50px 1.1rem 50px 1.1rem;
+  padding: 3rem 1.1rem 3rem 1.1rem;
 
   h1 {
     margin-bottom: 20px;
@@ -76,4 +73,10 @@
     font-size: 2rem;
     color: #f1f1e7;
   }
+}
+
+.form-recovery-container {
+  @include flex-mixin.flex-end;
+  width: 100%;
+  height: auto;
 }
