--- a/src/styles.css
+++ b/src/styles.css
@@ -171,7 +171,7 @@
   }
 }
 .form-wrapper {
-  height: 100dvh;
+  height: auto;
   width: 100%;
   padding: 0 0 2rem 0;
   display: flex;
@@ -216,8 +216,18 @@
   z-index: -1;
 }
 
-.form-section-buttons {
+.form-buttons-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 10rem;
   width: 100%;
+  height: auto;
+}
+
+.form-section-buttons {
+  width: 50%;
   height: auto;
   margin: 0 auto;
   gap: 1rem;
@@ -250,17 +260,25 @@
   background-color: #3F4222;
 }
 
-.form-sign-up-button {
+.form-sign-up-button, .form-forgot-password-button {
   width: auto;
   font-weight: 400;
   font-size: 1rem;
   color: white;
   text-decoration: underline;
   text-underline-offset: 0.5rem;
-  transition: color 0.3s ease, color 0.3s ease;
+  transition: color 0.3s ease;
 }
-.form-sign-up-button:hover {
+.form-sign-up-button:hover, .form-forgot-password-button:hover {
   color: #959b59;
+}
+
+.form-forgot-password-button {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+}
+.form-forgot-password-button:hover {
+  text-decoration: underline;
 }
 
 .react-tel-input .special-label {
@@ -283,6 +301,7 @@
 .form-section-checkbox {
   width: 100%;
   height: auto;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -316,11 +335,12 @@
   position: relative;
   z-index: 1;
   width: clamp(300px, 80vw, 1300px);
+  min-height: 840px;
   height: auto;
   background-image: url("/assets/form-back.webp");
   background-size: cover;
   border-radius: 4px;
-  padding: 1rem;
+  padding: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -328,12 +348,13 @@
 
 .form-login {
   width: 100%;
-  height: 750px;
+  min-height: 740px;
+  height: auto;
   backdrop-filter: blur(10px);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
 
 .form-article {
@@ -366,13 +387,13 @@
 
 .form-inside-container-left {
   width: 100%;
-  height: auto;
-  min-height: 100%;
+  min-height: 740px;
+  height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  padding: 50px 1.1rem 50px 1.1rem;
+  padding: 3rem 1.1rem 3rem 1.1rem;
 }
 .form-inside-container-left h1 {
   margin-bottom: 20px;
@@ -381,11 +402,14 @@
   color: #f1f1e7;
 }
 
-@media (max-width: 1600px) {
-  .form-wrapper {
-    height: auto;
-  }
+.form-recovery-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: auto;
 }
+
 @media (max-width: 1000px) {
   .form-wrapper {
     display: flex;
@@ -439,6 +463,9 @@
   .form-inside-container-left h1 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+  }
+  .form-section-buttons {
+    width: 100%;
   }
 }
 .success-btn {
@@ -543,22 +570,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 5rem;
   padding: 0 2rem;
+  margin-bottom: 1rem;
   width: 100%;
 }
 .survey-header .header-item {
   flex: 1;
   display: flex;
   align-items: center;
-}
-.survey-header .header-center {
-  justify-content: center;
-}
-.survey-header .header-center p {
-  color: white;
-  font-weight: 300;
-  font-size: 1.2rem;
 }
 .survey-header .header-left {
   justify-content: flex-start;
@@ -643,20 +662,20 @@
   width: 100%;
   height: auto;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  color: #F1F1E7;
 }
 .survey-article h1 {
   font-weight: 800;
-  font-size: 1.8rem;
-  color: #F1F1E7;
+  font-size: 1.2rem;
+  width: 100%;
   text-align: center;
 }
 .survey-article p {
-  color: #F1F1E7;
   font-size: 1rem;
   font-weight: 200;
   margin-bottom: 1.1rem;
@@ -669,7 +688,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.1rem;
 }
 
 .question-block-end {
@@ -695,7 +714,7 @@
 .survey {
   z-index: 1;
   width: 100%;
-  height: 100dvh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -722,6 +741,8 @@
   padding-bottom: 1rem;
   background: rgba(55, 53, 53, 0.6);
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   border-radius: 50px;
 }
@@ -733,11 +754,11 @@
   gap: 1rem;
   background-color: #f1f1e7;
   width: 700px;
-  height: 70px;
+  height: 60px;
   border-radius: 5px;
   padding-left: 1.1rem;
   cursor: pointer;
-  margin-bottom: 2.2rem;
+  margin-bottom: 1rem;
 }
 .radio-container input[type=radio] {
   display: none;
@@ -773,15 +794,15 @@
   .survey-wrapper p {
     font-size: 1rem;
   }
-  .survey {
-    height: auto;
-  }
   .survey-block {
-    width: 90%;
+    width: 99%;
     height: auto;
-    padding-bottom: 5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 1rem 1rem 5rem 1rem;
+    border-radius: 30px;
+  }
+  .survey {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .survey-header p {
     font-size: 0.8rem;
@@ -794,31 +815,33 @@
     width: 15px;
     height: 15px;
   }
-  .survey-article p {
-    text-align: center;
-    width: 100%;
-    font-size: 0.8rem;
-  }
   .radio-container {
     width: 100%;
     height: 50px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+  }
+  .radio-container p {
+    font-size: 0.8rem;
   }
   .survey-config {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     height: 50px;
   }
   .next-end-button {
     width: 120px;
     height: 40px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 500;
   }
   .prev-skip-button {
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 400;
   }
 }
@@ -852,23 +875,9 @@
   width: 100%;
   min-height: 100vh;
   height: auto;
-  background: rgba(204, 204, 204, 0.8);
+  background-color: #f4f4f4;
   padding: 1rem;
   border: 1px solid black;
-}
-
-.admin-bg {
-  background-image: url("/assets/dark-bg.webp");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  filter: brightness(50%);
-  pointer-events: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  inset: 0;
-  z-index: -1;
 }
 
 .admin-panel h2 {
@@ -954,8 +963,6 @@
   margin: 20px 0;
   font-family: "Manrope", sans-serif;
   border: 1px solid #222;
-  border-radius: 8px;
-  overflow: hidden;
 }
 
 .table-header {
@@ -1129,6 +1136,7 @@ button {
   appearance: none;
   box-shadow: none;
   border: none;
+  border-radius: 0;
   outline: none;
   background: none;
   font-size: 1rem;
